--- a/style.css
+++ b/style.css
@@ -635,6 +635,7 @@ button:hover,
 .contact-buttons {
   display: flex;
   gap: 1.5rem;
+  margin: 0.5rem;
   justify-content: center;
   flex-wrap: wrap;
 }
@@ -715,3 +716,14 @@ button.btn {
   }
 }
 
+#counter-container {
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.counter-text {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 0.3rem;
+  color: white; /* or any color you like */
+}
