--- a/style.css
+++ b/style.css
@@ -724,6 +724,7 @@ button.btn {
 .counter-text {
   font-size: 1rem;
   font-weight: 500;
-  margin-bottom: 0.3rem;
-  color: white; /* or any color you like */
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  color: white;
 }
